--- a/inv.ini
+++ b/inv.ini
@@ -1,4 +1,4 @@
-[all:vars]
+[fresh:vars]
 ansible_connection=ssh
 ansible_user=pi
 ansible_ssh_pass=raspberry
@@ -15,3 +15,6 @@ node4.home
 [k3s:children]
 master
 workers
+
+[fresh]
+raspberrypi.home
