add initial base ansible playbooks

--- a/inv.ini
+++ b/inv.ini
@@ -1,7 +1,20 @@
-[fresh:vars]
+[salt]
+salt.home
+
+[pepper]
+pepper.home
+
+[basil]
+basil.home
+
+[spice:children]
+salt
+pepper
+basil
+
+[spice:vars]
 ansible_connection=ssh
-ansible_user=pi
-ansible_ssh_pass=raspberry
+ansible_user=colin.bruner
 
 [master]
 kube1.home
@@ -18,3 +31,9 @@ workers
 
 [fresh]
 raspberrypi.home
+
+[fresh:vars]
+ansible_connection=ssh
+ansible_user=pi
+ansible_ssh_pass=raspberry
+
