add a few more ansible updates

--- a/playbooks/base.yml
+++ b/playbooks/base.yml
@@ -18,3 +18,11 @@
         name: "{{ packages }}"
         state: installed
 
+    - name: Include Users Role
+      include_role:
+        name: users
+
+    - name: Include Firewalld Role
+      include_role:
+        name: firewalld
+
